syntax = "proto3";
package server_info;

service ServerInfo {
    rpc Info (InfoRequest) returns (InfoResponse);
}

message InfoRequest {
}

message InfoResponse {
    string service_name = 1;
    string service_version = 2;
    string public_key = 3;
}